syntax = "proto3";

package pb;

message WakuMessage {
    bytes payload = 1;
    string content_topic = 2;
    uint32 version = 3;
    sint64 timestamp = 10;
}