syntax = "proto3";

package pb;

import "waku_message.pb.proto";

message Index {
  bytes digest = 1;
  sint64 receiver_time = 2;
  sint64 sender_time = 3;
  string pubsub_topic = 4;
}

message PagingInfo {
  uint64 page_size = 1;
  Index cursor = 2;
  enum Direction {
    BACKWARD = 0;
    FORWARD = 1;
  }
  Direction direction = 3;
}

message ContentFilter {
  string contentTopic = 1;
}

message HistoryQuery {
  string pubsub_topic = 2;
  repeated ContentFilter content_filters = 3;
  PagingInfo paging_info = 4; // used for pagination
}

message HistoryResponse {
  // the first field is reserved for future use
  repeated WakuMessage messages = 2;
  PagingInfo paging_info = 3;
  enum Error {
    NONE = 0;
    INVALID_CURSOR = 1;
  }
  Error error = 4;
}

message HistoryRPC {
  string request_id = 1;
  HistoryQuery query = 2;
  HistoryResponse response = 3;
}
